style.css
/* ... */
div:not(.alignwide):not(.alignfull),
p:not(.alignwide):not(.alignfull),
blockquote:not(.alignwide):not(.alignfull),
h1:not(.alignwide):not(.alignfull),
h2:not(.alignwide):not(.alignfull),
h3:not(.alignwide):not(.alignfull),
h4:not(.alignwide):not(.alignfull),
h5:not(.alignwide):not(.alignfull),
h6:not(.alignwide):not(.alignfull),
ol:not(.alignwide):not(.alignfull),
ul:not(.alignwide):not(.alignfull) {
	width: 100%;
}

.narrow {
	max-width: calc( var(--aligndefault) * 0.75 );
	margin-left: auto;
	margin-right: auto;
}

.blog .meat-potatoes,
.archive .meat-potatoes {
	max-width: var(--alignwide);
	margin-left: auto;
	margin-right: auto;
	margin-top: calc( 2 * var(--gap));

	.post {
		max-width: var(--aligndefault);
		margin-left: auto;
		margin-right: auto;
		margin-bottom: calc( 2 * var(--gap));
	}
	.post.has-post-thumbnail {
		display: flex;
		flex-direction: row;
		gap: var(--gap);

		.post-thumbnail {
			max-width: 321.67px;
			margin-bottom: 0;
			padding-left: 0;
			padding-right: 0;
			margin-left: 0;
			margin-right: 0;
		}
	}
	.entry-header {
		padding-left: 0;
		padding-right: 0;
	}
}
@media screen and (max-width: 964px) {
	.blog .meat-potatoes,
	.archive .meat-potatoes {
		padding-left: var(--page-margin);
		padding-right: var(--page-margin);
	}
} 
@media screen and (max-width:781px) {
	.blog .meat-potatoes .post.has-post-thumbnail,
	.archive .meat-potatoes .post.has-post-thumbnail {
		flex-direction: column;
		gap: calc( var(--gap) / 2 );
	}
}

.site-header .site-branding {
	padding: 0;
}
.site-branding {
	display: flex;
	flex-direction: row;
	gap: var(--gap);
	justify-content: flex-start;
	align-items: center;
}

.custom-logo-link  {
	width: auto !important;

	img {
		width: auto !important;
	}
}

@media screen and (min-width: 801px) and (max-width: 1099px) {
	.site-header {
		flex-direction: column;
		gap: 0;
		margin-bottom: var(--gap);
	}
}

h1, h2, h3, h4, h5, h6 {
	font-family: var(--font-primary);
	color: var(--grey-dark);
	font-weight: 700;
}

h2 {
	text-transform: uppercase;
	letter-spacing: 0.6px;
	margin-bottom: var(--gap);
}

.entry-content > h2 {
	margin-top: calc( 2 * var(--gap));
}

.entry-header-wrap,
.page-header-wrap {
	position: relative;
	width: 100%;
	background: var(--red);
	padding-top: var(--gap);
	padding-bottom: var(--gap);
}
.home .entry-header-wrap { display: none; }

.entry-header,
.page-header {
	max-width: var(--aligndefault);
	margin-left: auto;
	margin-right: auto;

	.entry-title,
	.page-title {
		position: relative;
		color: var(--white);
		text-transform: none;
		margin-top: 0;
		margin-bottom: 0;
		z-index: 10;
	}
}
.home .page-header,
.home .entry-header {
	display: none;
}
@media screen and (min-width:966px) {
	.entry-header {
		padding-left: 0;
		padding-right: 0;
	}
}

.page-title-separator {
	text-transform: uppercase;
	font-weight: 400;
}

.no-bmargin {
	margin-bottom: 0 !important;
}

.site-main article:not(.has-post-thumbnail) .entry-content {
	padding-top: calc( 2 * var(--gap));
}
.home .site-main .entry-content,
.blog .site-main .post .entry-content,
.archive .site-main .post .entry-content,
.site-main .entry-content:has(.wp-block-cover:first-child),
.site-main .entry-content:has(.wp-block-image:first-child) {
	padding-top: 0 !important;
}
.site-main .entry-content .wp-block-image:first-child {
	margin-top: 0;
}

.wp-block-cover {
	padding-top: calc( 4 * var(--page-margin));
	padding-bottom: calc( 4 * var(--page-margin));
}

.wp-block-cover h2 {
	margin-top: 0;
	margin-bottom: 0;
}

ul.wp-block-list li::marker {
	color: var(--purple-light);
}

hr {
	background-color: var(--grey-dark);
}

/* buttons */
.wp-block-buttons .wp-block-button {
	width: auto !important;
}
.wp-block-buttons .wp-block-button:last-child .wp-block-button__link {
	margin-bottom: 0;
}
.wp-block-buttons.is-content-justification-center {
	justify-content: center;
}
button,
.wp-block-buttons .wp-block-button__link,
.nf-field .field-wrap input[type="submit"] {
	width: auto;
	background: var(--grey);
	color: var(--white);
	font-size: var(--font-size-1);
	font-weight: 700;
	text-transform: uppercase;
	border: 1px solid var(--blue);
	border-radius: var(--border-radius);
	padding: 0.75rem 1.25rem;
	filter: drop-shadow(0px 4px 4px var(--grey));
}
button:hover,
button:focus,
button:active,
.wp-block-button__link:hover,
.wp-block-button__link:focus,
.wp-block-button__link:active {
	background: var(--grey-dark);
}
.wp-block-button.red .wp-block-button__link {
	background: var(--red);
}
.wp-block-button.red .wp-block-button__link:hover,
.wp-block-button.red .wp-block-button__link:focus {
	background: var(--link-hover-color);
}

/* NAVIGATION */
.main-navigation ul.nav-menu {
	gap: 2rem;
}
#menu-primary > li {
	width: auto;
}
.nav-menu > li > a {
	color: var(--purple-dark);
	font-weight: 700;
	text-transform: uppercase;
}
#menu-primary .sub-menu {
	width: 250px;

	li {
		margin-bottom: 0;
		border-bottom: 1px solid var(--grey-light);
		padding: 0.25rem 0;
	}
	li:last-child {
		border-bottom: none;
	}

	a {
		font-weight: 400;
	}
}
/* MOBILE NAV */
@media screen and (max-width: 800px) {
	.main-navigation {
		z-index: 100;
	}
	#menu-primary .sub-menu {
		width: 100%;
		column-count: 2;
	}
}

/* FOOTER */
.site-footer-wrap {
	position: relative;
	background: var(--gold);
	margin-top: calc( var(--gap) + 29px);
	padding-bottom: 0;
}
.site-footer-wrap:before {
	content: '';
	position: absolute;
	background: transparent url(inc/img/footer-swoosh.png) no-repeat;
	background-position: top right;
	background-size: 260px;
	top: -12.5px;
	right: 0;
	height: 100%;
	width: 100%;
}
/*
.site-footer {
	padding-right: 15%;
}
/* ... */

